--- a/404.html
+++ b/404.html
@@ -217,10 +217,10 @@ body.sticky-header header h1 {
     <h1>鯨魚數學專欄</h1>
     <h3>Get higher, watch clearer</h3>
     <nav>
-      <a href="index.html">數學</a>
-      <a href="informatic.html">資訊</a>
-      <a href="topic.html">專題</a>
-      <a href="about.html">About Me</a>
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
     </nav>
   </header>
   <div class="wrapper">
