--- a/about.html
+++ b/about.html
@@ -176,6 +176,7 @@ section {
   -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 5px 5px rgb(184, 184, 184);
 }
 
 /* From Uiverse.io by ErzenXz */ 
