--- a/informatic.html
+++ b/informatic.html
@@ -104,6 +104,7 @@ header {
 header h1 {
   font-size: 42px;
   color: #fff;
+  text-shadow: black 0.1em 0.1em 0.2em;
   line-height: 200px;
   text-transform: uppercase;
   font-weight: 100;
@@ -111,10 +112,12 @@ header h1 {
   -o-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  font-weight: bold;
 }
 header h3 {
   font-size: 22px;
   color: #fff;
+  text-shadow: black 0.1em 0.1em 0.2em;
   line-height: 0px;
   text-transform: uppercase;
   font-weight: 100;
@@ -164,6 +167,7 @@ p {
 .wrapper {
   width: 800px;
   margin: 0 auto;
+  box-shadow: 10px 5px 5px rgb(184, 184, 184);
 }
 
 section {
@@ -176,6 +180,7 @@ section {
   -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 5px 5px rgb(184, 184, 184);
 }
 
 /* Sticky Header Style */
@@ -217,10 +222,10 @@ body.sticky-header header h1 {
     <h1>鯨魚數學專欄</h1>
     <h3>Get higher, watch clearer</h3>
     <nav>
-      <a href="index.html">數學</a>
-      <a href="informatic.html">資訊</a>
-      <a href="topic.html">專題</a>
-      <a href="about.html">About Me</a>
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#"></a> <!--Navbar上的文字-->
     </nav>
   </header>
   <div class="wrapper">
