--- a/about.html
+++ b/about.html
@@ -249,13 +249,13 @@ body.sticky-header header h1 {
 
 <body translate="no" class="">
   <header>
-    <h1></h1> <!---網頁最頂端--->
-    <h3></h3> <!--底下的標語-->
+    <h1>owo</h1> <!---網頁最頂端--->
+    <h3>owo</h3> <!--底下的標語-->
     <nav>
-      <a href="#"></a> <!--Navbar上的文字-->
-      <a href="#"></a> <!--Navbar上的文字-->
-      <a href="#"></a> <!--Navbar上的文字-->
-      <a href="#"></a> <!--Navbar上的文字-->
+      <a href="#">a</a> <!--Navbar上的文字-->
+      <a href="#">a</a> <!--Navbar上的文字-->
+      <a href="#">a</a> <!--Navbar上的文字-->
+      <a href="#">a</a> <!--Navbar上的文字-->
     </nav>
   </header>
   <div class="wrapper">
