--- a/about.html
+++ b/about.html
@@ -106,11 +106,12 @@ header h1 {
   color: #fff;
   line-height: 200px;
   text-transform: uppercase;
-  font-weight: 100;
+  font-weight: bold;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  text-shadow: black 0.1em 0.1em 0.2em;
 }
 header h3 {
   font-size: 22px;
