--- a/extra-curriculum.html
+++ b/extra-curriculum.html
@@ -192,6 +192,20 @@
           color: rgb(7, 230, 255);
           text-decoration:none
         }
+
+        h3{
+            font-size: 25px;
+        }
+
+        h4{
+            line-height: 50px;
+            font-size: 20px;
+        }
+
+        pre {
+            position: relative;
+            margin-left: 50px;
+        }   
     
         /* From Uiverse.io by ErzenXz */ 
     button {
@@ -259,29 +273,47 @@
         <h3></h3> <!--底下的標語-->
         <nav>
           <a href="index.html">Home</a> <!--Nav bar上面的的文字-->
-          <a href="about.html">About</a> <!--Nav bar上面的的文字-->
         </nav>
       </header>
       <div class="wrapper">
         <section id="steezy">
-          <h2>Header</h2>
-          <p>Name: Tse Yu/ 陳澤宇</p>
+          <h2>Introduciton:</h2>
+          <p>My extracurricular journey has been a mosaic of diverse experiences, blending creativity, leadership, and teamwork. From music and sports to academic challenges, each activity has shaped my perspective and fueled my personal growth. Dive in to learn more about my adventures in acapella, baseball, and beyond.</p>
           <p>Personality:</p>
           <img src="">
-          <h2>Contact:</h2>
-          <p>Telephone: 0920147213</p>
-          <p>Email: tychen2022@gmail.com</p>
-          <h2>About</h2>
-          <p>I am a passionate and multi-talented student with a strong foundation in science, innovation, and leadership. As a member of the prestigious science class at the National Experimental High School at Hsinchu Science Park, I have excelled in academics, demonstrated through achievements such as perfect scores in chemistry examinations and high-level experimental problem-solving in physics. My versatility extends beyond academics—I’ve led groups in acapella and sports, organized international exchange programs, and actively contributed to community service and education initiatives. My ability to combine analytical thinking with creativity and empathy enables me to excel in team-oriented environments, whether in scientific exploration, leadership roles, or collaborative pursuits.</p> <!--內文-->
-          <button>
-            <a href="#">Learn more</a>
-          </button>
-          <button>
-            <a href="#">Explore My Art</a>
-          </button>
-          <button>
-            <a href="#">Watch Videos</a>
-          </button>
+          <h2>Acapella:</h2>
+          <h3>Intro Text:</h3>
+          <h4>Building Bridges Through Music</h4>
+          <p>
+            In high school, I joined both the acapella club and the choir team, two groups with different dynamics. The choir had a larger membership, reflecting the relative unfamiliarity of acapella in my country. I recognized the potential of these groups to inspire one another and decided to act as a bridge, promoting the unique art of acapella.
+
+            I took the initiative to introduce voice percussion, performing live to spark interest and collaborating with choir leaders to form a trio that combined our talents. We showcased our performance at a school assembly, drawing attention to the innovative style. Additionally, I organized lunchtime practice sessions open to anyone curious about acapella, creating an inclusive environment.
+
+            Over two years, my efforts led to a 50% increase in acapella club membership, with choir members adopting acapella techniques and vice versa. This exchange deepened bonds across both clubs, fostered team spirit, and introduced innovative singing methods that enriched performances on both sides.
+
+          </p>
+          <h3>Images and Vedios:</h3>
+          <h2>Baseball:</h2>
+          <h3>Intro Text:</h3>
+          <h4>Leadership Behind the Plate</h4>
+          <p>As the catcher for my high school baseball team, I played a pivotal role both on and off the field. Catching demands not only technical precision but also strategic thinking and emotional resilience. I took on the responsibility of analyzing game situations, adjusting strategies, and supporting the pitchers to maintain their focus under pressure. This required building strong rapport with multiple teammates, which I achieved through consistent communication and personalized encouragement.
+
+            Despite starting my baseball training later than most of my peers, I committed to extensive practice sessions, including after-school and lunch breaks, to master foundational skills. Over time, I grew into the role of a reliable "anchor" for my team—an emotional and tactical leader. My efforts contributed to achieving the best ranking in school history during the High School Baseball League, showcasing not only the team’s growth but also my adaptability and perseverance.
+          </p>
+
+          <h3>Images and Videos:</h3>
+
+          <h2>Others</h2>
+          <h3>Guitar and Music:</h3>
+          <p>
+            Attending the Ysxm Guitar Camp and joining the school guitar club allowed me to explore my musical creativity. These experiences deepened my appreciation for collaboration and artistry.
+          </p>
+          <h3>Video Production:</h3>
+          <p>As the producer for the Science Class Achievement Exhibition video, I honed my technical and organizational skills. This project underscored the importance of teamwork, as I coordinated tasks ranging from scriptwriting to editing, earning recognition from peers and teachers.</p>
+          <h3>Competitions:</h3>
+          <p>Achieving 2nd place in the National Cybersecurity Skills Competition and excelling in the Min Nan Reading Contest demonstrated my ability to adapt and excel in diverse fields. These challenges taught me problem-solving and communication skills.</p>
+          <h3>Sports:</h3>
+          <p>My participation in volleyball, table tennis, and track events reinforced the value of persistence and camaraderie. These sports achievements, including leading my team to victory in a 1200m relay, highlighted the rewards of teamwork and dedication.</p>
         </section>
       </div>
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
