--- a/extra-curriculum.html
+++ b/extra-curriculum.html
@@ -269,7 +269,7 @@
     
     <body translate="no" class="">
       <header>
-        <h1></h1> <!---網頁最頂端--->
+        <h1>Extra-Curriculum</h1> <!---網頁最頂端--->
         <h3></h3> <!--底下的標語-->
         <nav>
           <a href="index.html">Home</a> <!--Nav bar上面的的文字-->
